--- a/src/components/cocktailPosts/CocktailPosts.css
+++ b/src/components/cocktailPosts/CocktailPosts.css
@@ -1,3 +1,13 @@
 .cocktail-image {
     width: 20%
 }
+
+.liquor_select {
+    width: 25%
+}
+
+.liquor_input {
+    display: flex;
+    justify-content: flex-start;
+    
+}
