--- a/src/components/cocktailPosts/CocktailPosts.css
+++ b/src/components/cocktailPosts/CocktailPosts.css
@@ -6,8 +6,28 @@
     width: 25%
 }
 
-.liquor_input {
-    display: flex;
-    justify-content: flex-start;
-    
+.liqueur_select {
+    width: 25%
 }
+
+.staple_ingredient_select {
+    width: 25%
+}
+
+.new_cocktail_recipe {
+    width: 18%;
+    height: 70px
+
+}
+
+.new_cocktail_caption {
+    width: 18%;
+    height: 70px;
+    text-align: start;
+
+}
+
+.new_cocktail_image {
+    width: 18%
+}
+
