--- a/src/components/home/Homepage.css
+++ b/src/components/home/Homepage.css
@@ -10,12 +10,12 @@
 
 
   .header-image {
-    max-width:100%;
-    height: auto;
+    width:100%;
+    height: 120%;
     position: fixed;
     top: -8%;
     left: 0;
-    z-index: 1;
+    z-index: -1;
     filter: opacity(90%) contrast(28%);
 
 }
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-     margin-top: 21.5%;
+     margin-top: 20.5%;
    /* margin-left: 2%; */
     /* margin-top: 22.2%;
     margin-right: 27%; */
