--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: 0%;
+  padding:0%;
 }
 
+html {
+  margin:0%;
+  padding:0%
+  
+}
 
