--- a/src/components/auth/Register.css
+++ b/src/components/auth/Register.css
@@ -1,9 +1,57 @@
- .register-main {
-    background-image: url('header.jpg');
-    
-} 
 
-ul { padding:0 } 
+  @font-face {
+    font-family: Dubiel;
+    src: url('../../fonts/Dubiel.ttf') format('truetype')
+  }
 
+img.login-image {
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    filter: opacity(90%) contrast(80%);
 
+}
 
+fieldset {
+    width: 100%;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    background-color: white ;
+
+}
+
+.bio {
+    width: 600px;
+    height: 100px;
+}
+.register-section {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.login-fieldset {
+    width: 100%
+}
+h1.form-header{
+    font-family: Dubiel, serif;
+    font-size: 50px;
+}
+
+.link--register {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    margin-left: -10%;
+
+}
+
+.login-info {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
