--- a/src/components/cocktail/CocktailExploreList.css
+++ b/src/components/cocktail/CocktailExploreList.css
@@ -3,9 +3,10 @@
     src: url('../../fonts/Dubiel.ttf') format('truetype')
   }
 
-.explore-cocktail-image, .explore-img {
+.explore-cocktail-image {
     width: 75%;
     aspect-ratio: 1/1;
+    border: 4px solid white
 }
 
 /* .explore-cocktail-item {
@@ -31,7 +32,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #E7D7C9;
+    background-color: #ede7e4;
+    
       
 }
 
@@ -41,6 +43,9 @@
     /* border: 1px solid #1C6EA4; */
     z-index: 0;
     margin: 0px;
+    font-size: 23px;
+    letter-spacing: 1px;
+    font-family: Dubiel;
 }
 
 .explore-overlay {
