--- a/src/TipsyTasting.css
+++ b/src/TipsyTasting.css
@@ -1,3 +1,13 @@
 html {
-    background-color: #ede7e4;
+    background: rgb(246,255,248);
+    background: radial-gradient(circle, rgba(246,255,248,1) 6%, rgba(204,227,222,1) 26%, rgba(177,203,203,1) 47%, rgba(164,195,178,1) 72%, rgba(107,144,128,1) 94%);
 }
+
+/* html {
+    background: rgb(254,197,187);
+background: linear-gradient(148deg, rgba(254,197,187,1) 0%, rgba(252,213,206,1) 13%, rgba(250,225,221,1) 28%, rgba(248,237,235,1) 45%, rgba(255,229,217,1) 62%, rgba(255,221,197,1) 81%, rgba(255,213,178,1) 100%);
+} */
+
+/* 
+background: rgb(255,243,230);
+    background: linear-gradient(98deg, rgba(255,243,230,1) 3%, rgba(255,246,241,1) 20%, rgba(253,226,228,1) 38%, rgba(253,237,243,1) 59%, rgba(237,228,237,1) 71%, rgba(223,231,253,1) 84%, rgba(229,236,255,1) 100%); */
