--- a/src/components/cocktail/CocktailExploreList.css
+++ b/src/components/cocktail/CocktailExploreList.css
@@ -22,8 +22,13 @@
     grid-row-gap: 40px;
     grid-column-gap: 20px;
     justify-content: center;
+    
 }
 
+.explore-header {
+    font-family: Dubiel;
+    font-size: 46px;
+}
 
 
 .cocktail_list {
@@ -32,7 +37,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background-color: #ede7e4;
+    /* background-color: #ede7e4; */
     
       
 }
@@ -46,6 +51,7 @@
     font-size: 23px;
     letter-spacing: 1px;
     font-family: Dubiel;
+    
 }
 
 .explore-overlay {
