--- a/src/TipsyTasting.css
+++ b/src/TipsyTasting.css
@@ -1,7 +1,12 @@
 html {
+    background: rgb(250,210,225);
+background: linear-gradient(148deg, rgba(250,210,225,1) 9%, rgba(253,226,228,1) 23%, rgba(223,231,253,1) 39%, rgba(205,218,253,1) 51%, rgba(190,225,230,1) 66%, rgba(214,232,232,1) 81%, rgba(223,235,233,1) 90%, rgba(226,236,233,1) 99%);
+}
+
+/* html {
     background: rgb(246,255,248);
     background: radial-gradient(circle, rgba(246,255,248,1) 6%, rgba(204,227,222,1) 26%, rgba(177,203,203,1) 47%, rgba(164,195,178,1) 72%, rgba(107,144,128,1) 94%);
-}
+} */
 
 /* html {
     background: rgb(254,197,187);
