--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,18 @@
 body {
-  margin: 0%;
-  padding:0%;
+  margin: 0;
+  padding:0;
+  display: inline;
+
 }
 
 html {
-  margin:0%;
-  padding:0%
+  margin:0;
+  padding:0;
+  display: inline;
   
+}
+
+div {
+  display: inline;
 }
 
