--- a/src/components/cocktail/CocktailExploreList.css
+++ b/src/components/cocktail/CocktailExploreList.css
@@ -24,7 +24,8 @@
 }
 
 .explore-cocktail-name {
-    margin: 13px
+    margin: 13px;
+    font-size: 34px;
 }
 
 .explore-header {
@@ -58,7 +59,7 @@
 .explore-overlay {
     z-index: 10;
     position: fixed;
-    background-color:rgba(0,0,0,.3);
+    background-color:rgba(0,0,0,.6);
     top: 0;
     right: 0;
     bottom: 0;
@@ -73,6 +74,7 @@
 
 .overlay-img {
     width: 50%;
+    height: auto;
     aspect-ratio: 1/1;
     margin-left: 7px;
     border-radius: 50px;
@@ -133,7 +135,7 @@
 .overlay-details {
     font-size: 18px;
     margin-left: 40px;
-    margin-top: -10px;
+    margin-top: 20px;
 }
 
 .overlay-ingredients {
@@ -143,7 +145,7 @@
 .overlay-middle {
     display: flex;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
 
 }
 
