--- a/src/components/cocktailPosts/CocktailForm.css
+++ b/src/components/cocktailPosts/CocktailForm.css
@@ -62,5 +62,26 @@
 .select-category {
     display: flex;
     justify-content: center;
+    margin-bottom: 40px
     
+}
+
+.form-img-upload {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.new_cocktail_recipe {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.new-recipe-input {
+    width: 40%;
+    height: 300%;
+    display: list-item;
 }
