--- a/src/components/cocktail/CocktailFeed.css
+++ b/src/components/cocktail/CocktailFeed.css
@@ -15,6 +15,7 @@
     font-family: Dubiel;
     font-size: 46px;
     color: black;
+    letter-spacing: 4px;
 }
 .cocktail-feed {
     position: absolute;
