--- a/src/components/cocktail/CocktailFeed.css
+++ b/src/components/cocktail/CocktailFeed.css
@@ -15,7 +15,7 @@
     font-family: Dubiel;
     font-size: 46px;
     color: black;
-    letter-spacing: 4px;
+    margin-bottom: 6%;
 }
 .cocktail-feed {
     position: absolute;
@@ -63,50 +63,8 @@
     font-size: 18px;
     margin-left: 40px;
     margin-top: 20px;
+    white-space: pre-line;
+    
     
 }
 
-
-
-
-/*! WORKING LAYOUT WITH BOARDER SHOWN AROUND PICTURE
-.cocktail-feed-image {
-    width: 98%;
-    aspect-ratio: 1/1;
-    border-radius: 40px;
-
-
-}
-
-.cocktail-feed {
-    position: absolute;
-    top: 15%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-}
-
-
-
-.cocktail-feed-item {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 30%;
-    height: auto;
-    background-color: white;
-    margin-bottom: 10px;
-}
-
-.cocktail-feed-post {
-    position: relative;
-    width: 100%;
-    margin: 30px;
-    margin-bottom: -20px;
-}
-*/
