--- a/src/components/cocktailPosts/CocktailForm.css
+++ b/src/components/cocktailPosts/CocktailForm.css
@@ -72,7 +72,8 @@
     display: flex;
     justify-content: center;
     height: auto;
-    margin-bottom: 40px
+    margin-bottom: 40px;
+    
 
 }
 
@@ -80,6 +81,7 @@
     width: 40%;
     height: 300px;
     font-size: 18px;
+    
 }
 
 
