--- a/src/components/cocktail/CocktailExploreList.css
+++ b/src/components/cocktail/CocktailExploreList.css
@@ -27,6 +27,9 @@
 .explore-cocktail-name {
     margin: 13px;
     font-size: 34px;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 5px;
 }
 
 .explore-header {
@@ -90,8 +93,8 @@
     /* display: flex;
     justify-content: center;
     align-items: center; */
-    background: rgb(250,210,225);
-    background: linear-gradient(148deg, rgba(250,210,225,1) 9%, rgba(253,226,228,1) 23%, rgba(223,231,253,1) 39%, rgba(205,218,253,1) 51%, rgba(190,225,230,1) 66%, rgba(214,232,232,1) 81%, rgba(223,235,233,1) 90%, rgba(226,236,233,1) 99%);
+    background: rgb(249,249,247);
+    background: radial-gradient(circle, rgba(249,249,247,1) 0%, rgba(247,245,236,1) 10%, rgba(234,238,227,1) 20%, rgba(224,233,225,1) 33%, rgba(222,229,224,1) 45%, rgba(220,226,223,1) 55%, rgba(215,219,223,1) 69%, rgba(209,211,223,1) 78%, rgba(212,209,222,1) 89%, rgba(228,217,228,1) 100%); 
     margin: 8%;
     width: 45%;
     height: 75%;
